Fix some appearance of parallax scrolling images and margins on mobile devices

--- a/Resources/Public/css/css_styled_content.css
+++ b/Resources/Public/css/css_styled_content.css
@@ -8,3 +8,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@media all and (max-width: 1000px) {
+.csc-default,
+.csc-frame-indent {
+    width: 95%;
+}
+}
